add an example for merge modify package.json

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@reactivex/rxjs": "^5.4.3",
-    "jquery": "^3.2.1",
-    "rsvp": "^4.0.1",
-    "rxjs": "^5.4.3"
+    "@reactivex/rxjs": "^6.2.1",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1"
   },
   "devDependencies": {},
   "scripts": {
